<resources>
    <string name="app_name">Tugas 1</string>
    
    <string name="hint_name">Enter Full Name</string>
    <string name="hint_address">Enter Address</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_phone">Enter Phone</string>
    <string name="hint_description">Enter Description</string>
    <string name="hint_experience">Enter Work Experience</string>
    <string name="hint_education">Enter Education</string>
    <string name="hint_skill">Enter Skills</string>

    <string name="button_submit">SUBMIT</string>
</resources>